# Taxa

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
branding/: render.mjs
docs/: code-signing.zh-CN.md  mcp-server.md
docs/superpowers/specs/: 2026-06-17-taxis-mcp-server-design.md
mcp/: Cargo.toml
mcp/src/: main.rs  resources.rs  server.rs  tools.rs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: claude.rs  engine.rs  keyring_store.rs  mod.rs  openai.rs  organizer.rs  prompt.rs  provider.rs
src-tauri/src/commands/: ai.rs  graph.rs  mod.rs  notebook.rs  search.rs  settings.rs
src-tauri/src/link/: graph.rs  mod.rs  parser.rs
src-tauri/src/notebook/: mod.rs  model.rs  service.rs
src-tauri/src/storage/: database.rs  markdown.rs  mod.rs
src/components/ai/: AiSidebar.vue  ChatArea.vue  ChatInput.vue  OperationCard.vue
src/components/common/: ConfirmDialog.vue  InputDialog.vue
src/components/editor/: EditorSearch.vue  EditorToolbar.vue  MilkdownCore.vue  MilkdownEditor.vue  NoteEditor.vue  TabBar.vue
src/components/folder/: FolderFileList.vue
src/components/graph/: GraphView.vue
src/components/layout/: AppLayout.vue  MenuBar.vue  StatusBar.vue
src/components/search/: SearchPanel.vue
src/components/settings/: LlmProviderForm.vue  SettingsDialog.vue
src/components/tree/: NoteTree.vue  TreeNode.vue
src/composables/: useProviderDrag.ts  useTauriCommand.ts  useTheme.ts  useUpdater.ts
src/i18n/: index.ts
src/i18n/locales/: ar.ts  de.ts  en.ts  es.ts  fr.ts  ja.ts  pt.ts  zh-CN.ts  zh-TW.ts
src/stores/: ai.ts  editor.ts  notebook.ts  settings.ts
src/styles/: global.css  variables.css
src/types/: ai-extended.ts  ai.ts  notebook.ts  settings.ts
