[package]
name = "taxa-mcp"
version = "0.2.0"
edition = "2021"
description = "Taxa MCP server — exposes the note knowledge base over stdio"

[[bin]]
name = "taxa-mcp"
path = "src/main.rs"

[dependencies]
# Shares the app's storage + notebook modules. The package is `taxa`
# (lib name `taxa_lib`); alias it so code uses `taxa_lib::`.
taxa_lib = { package = "taxa", path = "../src-tauri" }
serde_json = "1"
dirs = "5"
rusqlite = "0.31"
