[package]
name = "taxis"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taxis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Read-only MCP knowledge-base server for Claude Code / Codex.
# Shares the app's storage + notebook modules; serves stdio JSON-RPC.
[[bin]]
name = "taxis-mcp"
path = "src/bin/mcp/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
keyring = "3"
async-trait = "0.1"
thiserror = "2"
eventsource-stream = "0.2"
futures-util = "0.3"
toml = "0.8"
dirs = "5"
regex = "1"

